# FoXAI

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  FAQ.md  Makefile  README.md  docker-compose.yml  genindex.html  index.html  install.html  main.py  modules.html  mypy.ini  objects.inv  pylintrc  pyproject.toml  pytest.ini  search.html  searchindex.js  versions.json
.doctrees/: environment.pickle  index.doctree  install.doctree  modules.doctree
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: black.yaml  ci.yaml  installation_test.yaml  installation_test_auto_run.yaml  installation_test_called_workflow.yaml  installation_test_manual_run.yaml  lint.yaml  publish_docs.yaml  release.yaml  sphinx_docs_check.yaml  test.yaml
0.5.3/: foxai.callbacks.html  foxai.cli.html  foxai.explainer.html  genindex.html  install.html  modules.html
0.5.3/_modules/: index.html
0.5.3/_sources/: foxai.explainer.rst.txt  index.rst.txt
0.6.0/: foxai.callbacks.html  foxai.html  index.html  install.html  modules.html  objects.inv  searchindex.js
0.6.0/_modules/: index.html
0.6.0/_sources/: foxai.callbacks.rst.txt  foxai.cli.rst.txt  foxai.explainer.computer_vision.object_detection.rst.txt  modules.rst.txt
_sources/: install.rst.txt
autoxai/: __init__.py  array_utils.py  cache_manager.py  callback.py  context_manager.py  explainer_helper.py  logger.py  visualizer.py
autoxai/callbacks/: wandb_callback.py
autoxai/cli/: config_model.py  experiment_update.py
autoxai/explainer/: __init__.py  base_explainer.py  conductance.py  deconv.py  deeplift.py  deeplift_shap.py  errors.py  gradcam.py  gradient_shap.py  guided_backprop.py  input_x_gradient.py  integrated_gradients.py  lrp.py  model_utils.py  noise_tunnel.py  occlusion.py  occulusion.py  saliency.py
docs-gh-pages/: autoxai.callbacks.html  autoxai.cli.html  autoxai.explainer.html  autoxai.html  genindex.html  install.html  modules.html  objects.inv  py-modindex.html  searchindex.js
docs-gh-pages/_modules/: index.html
docs-gh-pages/_sources/: autoxai.callbacks.rst.txt  autoxai.cli.rst.txt  autoxai.explainer.rst.txt  autoxai.rst.txt
docs/source/: autoxai.explainer.rst  autoxai.rst  conf.py  index.rst  install.rst  modules.rst
example/: main.py  mnist.py  mnist_model.py  mnist_tensorboard.py  mnist_wandb.py  offline.py  offline_resnet.py
example/custom_callback/: cache_manager.py  callback.py  path_manager.py
example/gradcam/: main.py
example/gradcam_object_detection/: object_detection.ipynb
example/gradcam_yolo/: main.py
example/notebooks/: autoxai.ipynb  basic_usage.ipynb  deletion_insertion_metric_example.ipynb  explain.ipynb  focus_metric_example.ipynb  mobilenetv3.ipynb  pneumonia.ipynb  resnet.ipynb  vgg.ipynb  vit.ipynb  yolov5.ipynb
example/streamlit_app/: README.md  method_names.py  mnist_model.py  model_utils.py  run_streamlit.py  settings.py  streamlit_utils.py  visualization_utils.py
example/yolov5_exmaple/: yolo_utils.py  yolo_xai.ipynb  yolo_xai.py
foxai/: __init__.py  array_utils.py  context_manager.py  types.py  visualizer.py
main/: autoxai.callbacks.html  autoxai.cli.html  autoxai.explainer.html  autoxai.html  foxai.callbacks.html  foxai.cli.html  foxai.explainer.computer_vision.algorithm.html  foxai.explainer.computer_vision.html  foxai.explainer.computer_vision.object_detection.html  foxai.explainer.html  foxai.html  foxai.metrics.html  genindex.html  index.html  install.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/: Makefile  README.md  cache_manager.py  callback.py  data_transformer.py  explainer.py  explainer_manager.py  image_utils.py  model_utils.py  path_manager.py  pyproject.toml
src/explainer/: base_explainer.py  conductance.py  deconv.py  deeplift.py  deeplift_shap.py  gradcam.py  gradient_shap.py  input_x_gradient.py  integrated_gradients.py  lrp.py  model_utils.py  noise_tunnel.py  occulusion.py  saliency.py
src/src/: cache_manager.py  data_transformer.py  explainer.py  explainer_manager.py  main.py  model_utils.py  path_manager.py
test_models/: requirements.txt
tests/: pickachu_image.py  sample_model.py  test_array_utils.py  test_array_utils_copy.py  test_autoxai.py  test_context_manager.py  test_explainers.py  test_fullgradient.py  test_fullgradients.py  test_gpu.py  test_model_utils.py  test_visualizer.py
(+174 files in other folders)
