[tool.poetry]
name = "autoxai"
version = "0.5.1"
description = ""
authors = ["Adam Wawrzyński <adam.wawrzynski@reasonfieldlab.com>"]
readme = "README.md"
packages = [{include = "autoxai"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "1.23.4"
captum = "0.5.0"
torch = "^1.12.1"
torchvision = "0.13.1"
pytorch-lightning = "1.5.0"
torchmetrics = "0.11.0"
wandb = "^0.13.7"
pandas = "^1.5.2"
single-source = "0.3.0"
hydra-core = "^1.3.1"

[tool.poetry.group.dev.dependencies]
black = "22.10.0"
pylint = "2.15.4"
mypy = "0.982"
pytest = "7.2.0"
pre-commit = "2.21.0"

[tool.poetry.scripts]
autoxai-wandb-updater = "autoxai.cli.experiment_update:main"

[tool.poetry.group.docs.dependencies]
Sphinx = "5.3.0"
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
