[tool.poetry]
name = "foxai"
version = "0.6.0"
description = "Model Interpretability for PyTorch."
authors = ["ReasonField Lab Team"]
maintainers = [
	"Adam Jan Kaczmarek <adam.kaczmarek@reasonfieldlab.com>",
	"Adam Wawrzyński <adam.wawrzynski@reasonfieldlab.com>",
	"Kamil Rzechowski <kamil.rzechowski@reasonfieldlab.com>",
	"Rafał Pytel <rafal.pytel@reasonfieldlab.com>"
]
repository = "https://github.com/softwaremill/FoXAI"
keywords = [
    "Model Interpretability",
    "XAI",
    "explainable AI",
    "Model Understanding",
    "Feature Importance",
    "PyTorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering",
]
readme = "README.md"
packages = [{include = "foxai"}]
license = "Apache-2.0"
documentation = "https://softwaremill.github.io/FoXAI/"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/softwaremill/foxai/issues"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = ">=1.21.4,<2.0.0"
captum = ">=0.5.0,<1.0.0"
torch = ">=1.12.1,<=2.0.1"
pytorch-lightning = ">=1.5.0,<=2.0.4"
wandb = ">=0.13.7,<1.0.0"
pandas = ">=1.1.0,<=2.0.3"
single-source = ">=0.3.0,<1.0.0"
opencv-python = ">=4.7.0.68,<5.0.0"
hydra-core = ">=1.3.1,<2.0.0"
seaborn = "^0.12.2"
requests = "^2.31.0"
scikit-image = "^0.21.0"

[tool.poetry.group.dev.dependencies]
black = "22.10.0"
pylint = "2.15.4"
mypy = "0.991"
pytest = "7.2.0"
pre-commit = "2.21.0"
nbstripout = "0.6.1"
notebook = "^6.5.3"

[tool.poetry.group.example.dependencies]
torchmetrics = ">=0.11.0,<1.0.0"
torchvision = ">=0.13.1,<1.0.0"

[tool.poetry.scripts]
foxai-wandb-updater = "foxai.cli.experiment_update:main"

[tool.poetry.group.docs.dependencies]
Sphinx = "5.3.0"
sphinx-rtd-theme = ">=1.1.1,<2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
