[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Adam Wawrzyński <adam.wawrzynski@reasonfieldlab.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
captum = "^0.5.0"
torch = "^1.12.1"
torchvision = "^0.13.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylint = "^2.15.4"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
